# otpua2gnucash

./: .gitignore  README.md  pyproject.toml
docs/: private_acc_to_app_mapping.md
otpua2gnucash/: __init__.py
otpua2gnucash/core/: __init__.py  config_mapper.py  profiles.py  reader.py  statement.py
tests/: test.cfg  test.xls  test_config_mapper.py  test_statement.py  test_statement_reader.py
